# olap-oltp-roundtrip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
analytics/: dashboard.md  roundtrip_query.sql
app/: app.py  app.yaml  db.py
bundle/: README.md  databricks.yml
bundle/resources/: app.yml  setup_job.yml
bundle/src/app/: app.py  app.yaml  db.py  requirements.txt
bundle/src/notebooks/: create_lakebase.py  deploy_app.py  explore_and_roundtrip.py  generate_data.py
data_gen/: generate.py  load_to_uc.py
docs/: 03_deploy_app.md  access-request-template.md  attendee-runbook.md  concepts.md  dashboard.md  design.md  facilitator-notes.md  organizer-checklist.md  roles-and-permissions.md  scenario.md
docs/solutions/: create_maintenance_ticket.py  resolve_alert.py
docs/superpowers/plans/: 2026-07-08-app-lakebase-in-a-day.md
labs/: Lab 0 - Setup.md  Lab 1 - Generate Analytical Data.md  Lab 2 - Sync to Lakebase.md  Lab 3 - Build and Deploy the App.md  Lab 4 - Close the Round-Trip.md  preflight_check.py
labs/artifacts/: roundtrip_query.sql
notebooks/: 00_start_here.py  01_generate_data.py  02_create_lakebase.py  03_deploy_app.py  04_explore_and_roundtrip.py  Lab1 - Manufacturing Data Setup.ipynb  Lab2 - Lakebase Postgres with CDF.ipynb  Lab3 - Build and Deploy the App.ipynb  Lab3 - Reset (cleanup).ipynb  Lab4 - Close the Round-Trip.ipynb  README.md
setup/: admin_setup.py
sync/: 02_create_lakebase.md  create_lakebase.md  create_synced_tables.md
tests/: test_db_databricks.py
