[project]
name = "olap-oltp-roundtrip"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "psycopg[binary]>=3.1",
]

# No local pytest suite: the only test (tests/test_db_databricks.py) is a Databricks notebook
# that runs against a live Lakebase workspace, not under pytest.
